[package]
name = "rs-cpu-svo"
version = "0.1.0"
authors = ["Max Breitenfeldt <git@mxbr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.17.0", features = ["serde", "swizzle"] }
serde = "1.0.105"
csv = "1.1"

# gpu
futures = "0.3"
wgpu = "0.5"
glsl-to-spirv = "0.1.7"

# gui
clipboard = "0.5"
imgui = "0.3.0"
imgui-winit-support = "0.3.1"
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs" }

# windowing
winit = "0.21"

# cast to glsl uniform
bytemuck = "1.2.0"
