[package]
name = "svo"
version = "0.1.0"
authors = ["Max Breitenfeldt <git@mxbr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# gpu
futures = "0.3.5"
wgpu = "0.6.0"
shaderc = "0.6.2"
glsl-layout = "0.3.2"

# gui
clipboard = "0.5.0"
imgui = "0.4.0"
imgui-winit-support = "0.4.0"
imgui-wgpu = "0.9.0"

# windowing
winit = "0.22"

# cast to glsl uniform
bytemuck = "1.4.1"

# linalg
simba = {version = "0.2.4", features = ["packed_simd"]}
nalgebra = "0.22.1"

# misc
csv = "1.1.3"
serde = { version = "1", features = ["derive"] }
libc = "0.2"

[dev-dependencies]
criterion = "0.3.3"
rand = "0.7.3"

[[bench]]
name = "bench_simd"
harness = false

[[bench]]
name = "bench_grid_hierarchy"
harness = false

[profile.dev]
opt-level = 3
